Add support for larger screens

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/cosmo/bootstrap.min.css">
 
 
 
@@ -69,10 +69,10 @@
     <div class="container">
         <!-- Example row of columns -->
         <div class="first row">
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-4 col-md-offset-2 col-sm-6">
                 <h2>The open source world in your pocket</h2>
                 <p>The beautiful, colored open source Android app for browsing Github reporitories and their owners</p>
-                <p><a class="btn btn-primary btn-lg" href="#" role="button" id="download">Download now</a>  <a class="btn btn-default hidden-sm hidden-xs" href="#" role="button">Get source code</a>
+                <p><a class="btn btn-primary btn-lg" href="#" role="button" id="download">Download now</a>  <a class="btn btn-default btn-lg hidden-sm hidden-xs" href="#" role="button">Get source code</a>
                 </p>
 
             </div>
