NAv to the left

--- a/index.html
+++ b/index.html
@@ -49,13 +49,15 @@
                 </button>
                 <a class="navbar-brand" href="#">Gitskarios</a>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+            <div class="navbar-collapse collapse ">
+                <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#">Features</a>
                     </li>
                     <li><a href="#">FAQ</a>
                     </li>
                     <li><a href="#">About</a>
+                    </li>
+                    <li><a href="#"></a>
                     </li>
                 </ul>
             </div>
