--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
         <div class="row">
             <div class="carousel">
                 <div class="image-1">
-                    <img src="/img/git_github_users.png" />
+                    <img src="img/git_github_users.png" />
                 </div>
                 <div class="image-2">
-                    <img src="/img/git_profile_user.png" />
+                    <img src="img/git_profile_user.png" />
                 </div>
                 <div class="image-3">
-                    <img src="/img/green-ui.png" />
+                    <img src="img/green-ui.png" />
                 </div>
             </div>
 
         </div>
         <div class="row">
-            <img class="google-play" src="/img/google_play.svg" />
+            <img class="google-play" src="img/google_play.svg" />
 
         </div>
         <footer>
