--- a/faq.html
+++ b/faq.html
@@ -51,9 +51,9 @@
             </div>
             <div class="navbar-collapse collapse ">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#">Features</a>
+                    <li><a href="#">Features</a>
                     </li>
-                    <li><a href="/faq.html">FAQ</a>
+                    <li class="active"><a href="/faq.html">FAQ</a>
                     </li>
                     <li><a href="/about.html">About</a>
                     </li>
@@ -70,43 +70,43 @@
 
     <div class="container">
         <!-- Example row of columns -->
-        <div class="first row">
-            <div class="col-md-4 col-md-offset-2 col-sm-6">
-                <h2>The open source world in your pocket</h2>
-                <p>The beautiful, colored open source Android app for browsing Github reporitories and their owners</p>
-                <p><a class="btn btn-primary btn-lg" href="https://play.google.com/store/apps/details?id=com.alorma.github" role="button" id="download">Download now</a>  <a class="btn btn-default btn-lg hidden-sm hidden-xs" href="https://github.com/alorma/Gitskarios" role="button">Get source code</a>
-                </p>
 
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="feature-image"></div>
-            </div>
-
-
-        </div>
-        <div class="dark-bar row">
-            <div><span class="glyphicon glyphicon-star"></span>  <span id="star-count">...</span>
-                <span class=" glyphicon glyphicon-eye-open"></span>  <span id="follow-count">...</span>
-            </div>
-        </div>
         <div class="row">
-            <div class="carousel">
-                <div class="image-1">
-                    <img src="img/git_github_users.png" />
+            <div class="panel panel-default first-panel">
+                <div class="panel-heading">
+                    <h3 class="panel-title">What does Gitsakrios can do?</h3>
                 </div>
-                <div class="image-2">
-                    <img src="img/git_profile_user.png" />
-                </div>
-                <div class="image-3">
-                    <img src="img/green-ui.png" />
+                <div class="panel-body">
+                    It can list your repositories and the ones that you starred and are watching, search across Github, browse a repository source. It can also list your followers and people you're following.
                 </div>
             </div>
-
-        </div>
-        <div class="row">
-            <a href="https://play.google.com/store/apps/details?id=com.alorma.github">
-            <img class="google-play" src="img/google_play.svg" />
-</a>
+             <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">What does Gitsakrios can't do?</h3>
+                </div>
+                <div class="panel-body">
+                    List notification, issues and make coffee.
+                </div>
+            </div>
+             <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">What is Github?</h3>
+                </div>
+                <div class="panel-body">
+                    <blockquote>
+                        <p>GitHub is a Git repository web-based hosting service which offers all of the distributed revision control and source code management (SCM) functionality of Git as well as adding many of its own features. Unlike Git, which is strictly a command-line tool, GitHub provides a web-based graphical interface and desktop as well as mobile integration. It also provides access control and several collaboration features such as wikis, task management, and bug tracking and feature requests for every project. </p>
+                        <footer>Wikipedia</footer>
+                    </blockquote>
+                </div>
+            </div>
+             <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Is Gitskarios free?</h3>
+                </div>
+                <div class="panel-body">
+                    Yes, forever and even open source!
+                </div>
+            </div>
         </div>
         <footer>
             <p>&copy; alorma 2014</p>
