--- a/faq.html
+++ b/faq.html
@@ -51,11 +51,11 @@
             </div>
             <div class="navbar-collapse collapse ">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/Gitskarios/">Features</a>
+                    <li><a href="/">Features</a>
                     </li>
                     <li class="active"><a href="/Gitskarios/faq.html">FAQ</a>
                     </li>
-                    <li><a href="/Gitskarios/about.html">About</a>
+                    <li><a href="about.html">About</a>
                     </li>
                     <li><a href="#"></a>
                     </li>
