--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#">Features</a>
                     </li>
-                    <li><a href="/faq.html">FAQ</a>
+                    <li><a href="faq.html">FAQ</a>
                     </li>
-                    <li><a href="/about.html">About</a>
+                    <li><a href="about.html">About</a>
                     </li>
                     <li><a href="#"></a>
                     </li>
