--- a/about.html
+++ b/about.html
@@ -51,9 +51,9 @@
             </div>
             <div class="navbar-collapse collapse ">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/">Features</a>
+                    <li><a href="/Gitskarios/">Features</a>
                     </li>
-                    <li><a href="/Gitskarios/faq.html">FAQ</a>
+                    <li><a href="faq.html">FAQ</a>
                     </li>
                     <li class="active"><a href="about.html">About</a>
                     </li>
