--- a/faq.html
+++ b/faq.html
@@ -51,7 +51,7 @@
             </div>
             <div class="navbar-collapse collapse ">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/Gitskarios/">Features</a>
+                    <li><a href="/">Features</a>
                     </li>
                     <li class="active"><a href="faq.html">FAQ</a>
                     </li>
