--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
 </code></pre>
         </div>
         <footer>
-            <p>&copy; alorma 2014, website made by <a href="https://github.com/vinz243">Vinz243</a>/p>
+            <p>&copy; alorma 2014, website made by <a href="https://github.com/vinz243">Vinz243</a></p>
         </footer>
     </div>
     <!-- /container -->
