--- a/app/src/main/assets/changelog.html
+++ b/app/src/main/assets/changelog.html
@@ -21,9 +21,12 @@
 <body>
 
 <ol>
+    <li><b>NEW:</b> Add or set milestones from issue detail screen.</li>
     <li><b>NEW:</b> New tab in repository detail, with list of project contributors.</li>
-    <li><b>IMPROVE:</b> The detailed issue screen has been completely redesigned.</li>
-    <li><b>FIX:</b> Not show "name" messages when watch / unwatch a repository.</li>
+    <li><b>NEW:</b> Open submodules from list Source list.</li>
+    <li><b>FIX:</b> Title in toolbar is not properly aligned on landscape mode. <a href="https://github.com/gitskarios/Gitskarios/issues/102">#102</a></li>
+    <li><b>FIX:</b> Some commit date are showing authored date. <a href="https://github.com/gitskarios/Gitskarios/issues/89">#89</a></li>
+    <li><b>FIX:</b> Other minor fixes.</li>
 </ol>
 
 </body>
