--- a/app/src/main/assets/changelog.html
+++ b/app/src/main/assets/changelog.html
@@ -21,6 +21,7 @@
 <body>
 
 <ol>
+    <li><b>FIX:</b> Navigation back pressed.</li>
     <li><b>NEW:</b> Add or set milestones from issue detail screen.</li>
     <li><b>NEW:</b> New tab in repository detail, with list of project contributors.</li>
     <li><b>NEW:</b> Open submodules from list Source list.</li>
