Fix no content issues

--- a/app/src/main/assets/changelog.html
+++ b/app/src/main/assets/changelog.html
@@ -20,15 +20,16 @@
 </head>
 <body>
 
-<ol>
+<b>v.2.3.4</b>
+<ul>
+    <li><b>FIX:</b> Minor fixes.</li>
+</ul>
+<b>v.2.3.3</b>
+<ul>
     <li><b>NEW:</b> Add or set milestones from issue detail screen.</li>
     <li><b>NEW:</b> Filter issues by state, or search across all repository.</li>
     <li><b>NEW:</b> New tab in repository detail, with list of project contributors.</li>
     <li><b>NEW:</b> Open submodules from list Source list.</li>
-    <li><b>FIX:</b> Navigation back pressed.</li>
-    <li><b>FIX:</b> Title in toolbar is not properly aligned on landscape mode. <a href="https://github.com/gitskarios/Gitskarios/issues/102">#102</a></li>
-    <li><b>FIX:</b> Some commit date are showing authored date. <a href="https://github.com/gitskarios/Gitskarios/issues/89">#89</a></li>
-    <li><b>FIX:</b> Other minor fixes.</li>
-</ol>
+</ul>
 
 </body>
