--- a/app/src/main/assets/changelog.html
+++ b/app/src/main/assets/changelog.html
@@ -20,6 +20,11 @@
 </head>
 <body>
 
+<b>v.2.3.5</b>
+<ul>
+    <li><b>IMPROVEMENT:</b> Add support for chinese in markdown and issue detail.</li>
+    <li><b>FIX:</b> Minor fixes.</li>
+</ul>
 <b>v.2.3.4</b>
 <ul>
     <li><b>FIX:</b> Minor fixes.</li>
