--- a/app/src/main/assets/changelog.html
+++ b/app/src/main/assets/changelog.html
@@ -20,21 +20,31 @@
 </head>
 <body>
 
+<b>v.2.3.6</b>
+<ul>
+    <li><b>NEW:</b> Add new icon</li>
+    <li><b>NEW:</b> Open issues from links references (in comments, or readme)</li>
+    <li><b>FIX:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/108"><b>#108</b></a>
+        Can't close the app on Version 2.3.5
+    </li>
+    <li><b>FIX:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/109"><b>#109</b></a>
+        Share with Dialog when setting Milestone
+    </li>
+    <li><b>FIX:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/110"><b>#110</b></a>
+        Not found error after adding issue
+    </li>
+    <li><b>FIX:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/111"><b>#111</b></a>
+        Action bar Gist
+    </li>
+    <li><b>FIX:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/112"><b>#112</b></a>
+        Wrong selection in NavDrawer
+    </li>
+    <li><b>FIX:</b> Other minor fixes.</li>
+</ul>
 <b>v.2.3.5</b>
 <ul>
     <li><b>IMPROVEMENT:</b> Add support for chinese in markdown and issue detail.</li>
     <li><b>FIX:</b> Minor fixes.</li>
-</ul>
-<b>v.2.3.4</b>
-<ul>
-    <li><b>FIX:</b> Minor fixes.</li>
-</ul>
-<b>v.2.3.3</b>
-<ul>
-    <li><b>NEW:</b> Add or set milestones from issue detail screen.</li>
-    <li><b>NEW:</b> Filter issues by state, or search across all repository.</li>
-    <li><b>NEW:</b> New tab in repository detail, with list of project contributors.</li>
-    <li><b>NEW:</b> Open submodules from list Source list.</li>
 </ul>
 
 </body>
