Create new issue screen redesign, labels

--- a/app/src/main/assets/changelog.html
+++ b/app/src/main/assets/changelog.html
@@ -20,31 +20,10 @@
 </head>
 <body>
 
-<b>v.2.3.6</b>
+<b>v.2.3.7</b>
 <ul>
+    <li><b>IMPROVEMENT:</b> Create issue redesigned</li>
     <li><b>NEW:</b> Add new icon</li>
-    <li><b>NEW:</b> Open issues from links references (in comments, or readme)</li>
-    <li><b>FIX:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/108"><b>#108</b></a>
-        Can't close the app on Version 2.3.5
-    </li>
-    <li><b>FIX:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/109"><b>#109</b></a>
-        Share with Dialog when setting Milestone
-    </li>
-    <li><b>FIX:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/110"><b>#110</b></a>
-        Not found error after adding issue
-    </li>
-    <li><b>FIX:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/111"><b>#111</b></a>
-        Action bar Gist
-    </li>
-    <li><b>FIX:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/112"><b>#112</b></a>
-        Wrong selection in NavDrawer
-    </li>
-    <li><b>FIX:</b> Other minor fixes.</li>
-</ul>
-<b>v.2.3.5</b>
-<ul>
-    <li><b>IMPROVEMENT:</b> Add support for chinese in markdown and issue detail.</li>
-    <li><b>FIX:</b> Minor fixes.</li>
 </ul>
 
 </body>
