--- a/app/src/main/assets/changelog.html
+++ b/app/src/main/assets/changelog.html
@@ -23,7 +23,8 @@
 <b>v.2.3.7</b>
 <ul>
     <li><b>IMPROVEMENT:</b> Create issue redesigned</li>
-    <li><b>NEW:</b> Add new icon</li>
+    <li><b>FIXED:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/114">#114 </a> -1 second when adding/edit issue</li>
+
 </ul>
 
 </body>
