Add git hash and number commits

--- a/app/src/main/assets/changelog.html
+++ b/app/src/main/assets/changelog.html
@@ -20,11 +20,10 @@
 </head>
 <body>
 
-<b>v.2.3.7</b>
+<b>v.2.3.8</b>
 <ul>
-    <li><b>IMPROVEMENT:</b> Create issue redesigned</li>
-    <li><b>FIXED:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/114">#114 </a> -1 second when adding/edit issue</li>
-
+    <li><b>FIXED:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/116">#116 </a> Organizations not shown</li>
+    <li><b>FIXED:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/124">#124 </a> NullPointerException in RepoContributorsFragment.java</li>
 </ul>
 
 </body>
