--- a/app/src/main/assets/changelog.html
+++ b/app/src/main/assets/changelog.html
@@ -20,6 +20,11 @@
 </head>
 <body>
 
+<b>v.2.3.9</b>
+<ul>
+    <li><b>IMPROVEMENT:</b> Issue detail shows more information</li>
+    <li><b>NEW:</b> Assign user and set labels from issue detail screen</li>
+</ul>
 <b>v.2.3.8</b>
 <ul>
     <li><b>FIXED:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/116">#116 </a> Organizations not shown</li>
