--- a/app/src/main/assets/changelog.html
+++ b/app/src/main/assets/changelog.html
@@ -20,6 +20,11 @@
 </head>
 <body>
 
+<b>v.2.3.10</b>
+<ul>
+    <li><b>IMPROVEMENT:</b> Improved how Html content is shownin the app</li>
+    <li><b>IMPROVEMENT:</b> Issue detail screen revamped</li>
+</ul>
 <b>v.2.3.9</b>
 <ul>
     <li><b>IMPROVEMENT:</b> Issue detail shows more information</li>
