--- a/app/src/main/assets/changelog.html
+++ b/app/src/main/assets/changelog.html
@@ -20,20 +20,16 @@
 </head>
 <body>
 
+<b>v.2.4.0</b>
+<ul>
+    <li><b>IMPROVEMENT:</b> Improved events list to display more and easy readable content</li>
+    <li><b>IMPROVEMENT:</b> Improved how Html content is showing the app</li>
+</ul>
 <b>v.2.3.10</b>
 <ul>
-    <li><b>IMPROVEMENT:</b> Improved how Html content is shownin the app</li>
+    <li><b>IMPROVEMENT:</b> Improved how Html content is showing the app</li>
     <li><b>IMPROVEMENT:</b> Issue detail screen revamped</li>
 </ul>
-<b>v.2.3.9</b>
-<ul>
-    <li><b>IMPROVEMENT:</b> Issue detail shows more information</li>
-    <li><b>NEW:</b> Assign user and set labels from issue detail screen</li>
-</ul>
-<b>v.2.3.8</b>
-<ul>
-    <li><b>FIXED:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/116">#116 </a> Organizations not shown</li>
-    <li><b>FIXED:</b> <a href="https://github.com/gitskarios/Gitskarios/issues/124">#124 </a> NullPointerException in RepoContributorsFragment.java</li>
-</ul>
+
 
 </body>
