--- a/app/src/main/assets/changelog.html
+++ b/app/src/main/assets/changelog.html
@@ -22,6 +22,7 @@
 
 <b>v.2.4.0</b>
 <ul>
+    <li><b>CHANGE:</b> Move repositories / starred repositories / watched repositories to a single screen.</li>
     <li><b>IMPROVEMENT:</b> Improved events list to display more and easy readable content</li>
     <li><b>IMPROVEMENT:</b> Improved how Html content is showing the app</li>
 </ul>
