--- a/app/src/main/assets/changelog.html
+++ b/app/src/main/assets/changelog.html
@@ -20,6 +20,10 @@
 </head>
 <body>
 
+<b>v.2.4.1</b>
+<ul>
+    <li><b>NEW:</b> Add automatic notifications check, now notifications are displayed in the Statis Bar.</li>
+</ul>
 <b>v.2.4.0</b>
 <ul>
     <li><b>CHANGE:</b> Move repositories / starred repositories / watched repositories to a single screen.</li>
