--- a/app/src/main/assets/changelog.html
+++ b/app/src/main/assets/changelog.html
@@ -22,7 +22,7 @@
 
 <b>v.2.4.1</b>
 <ul>
-    <li><b>NEW:</b> Add automatic notifications check, now notifications are displayed in the Statis Bar.</li>
+    <li><b>NEW:</b> Add automatic notifications check, now notifications are displayed in the Status Bar.</li>
 </ul>
 <b>v.2.4.0</b>
 <ul>
