--- a/app/src/main/assets/changelog.html
+++ b/app/src/main/assets/changelog.html
@@ -20,26 +20,11 @@
 </head>
 <body>
 
-<b>v.2.4.2</b>
+<b>v.2.4.4</b>
 <ul>
-    <li><b>NEW:</b> Add breadcrumbs in Source list.</li>
-    <li><b>CHANGE:</b> Move change branch to top bar, so now Sources actions are simplified.</li>
+    <li><b>NEW:</b> Pull request support</li>
+    <li><b>IMPROVEMENT:</b> Long click on source list share file.</li>
     <li><b>FIX:</b> Some small bug fixes.</li>
-</ul>
-<b>v.2.4.1</b>
-<ul>
-    <li><b>NEW:</b> Add automatic notifications check, now notifications are displayed in the Status Bar.</li>
-</ul>
-<b>v.2.4.0</b>
-<ul>
-    <li><b>CHANGE:</b> Move repositories / starred repositories / watched repositories to a single screen.</li>
-    <li><b>IMPROVEMENT:</b> Improved events list to display more and easy readable content</li>
-    <li><b>IMPROVEMENT:</b> Improved how Html content is showing the app</li>
-</ul>
-<b>v.2.3.10</b>
-<ul>
-    <li><b>IMPROVEMENT:</b> Improved how Html content is showing the app</li>
-    <li><b>IMPROVEMENT:</b> Issue detail screen revamped</li>
 </ul>
 
 
