dark webview file

--- a/app/src/main/assets/diff_dark.html
+++ b/app/src/main/assets/diff_dark.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Diff</title>
-    <link rel="stylesheet" href="file:///android_asset/source.css">
+    <link rel="stylesheet" href="file:///android_asset/source_dark.css">
 </head>
 <body>
 <pre><code id="code" class="prettyprint"></code></pre>
